// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component Should match snapshot 1`] = `
<div>
  <div
    class="css-xcsx4z"
  >
    <input
      class="css-msl6v2"
      id="test"
      value=""
    />
  </div>
</div>
`;

exports[`Input Component Should render with an input mask 1`] = `
<div>
  <div
    class="css-xcsx4z"
  >
    <input
      class="css-msl6v2"
      id="test"
      value=""
    />
  </div>
</div>
`;

exports[`Input Wrapper Component Should match snapshot 1`] = `
<div>
  <div
    class="css-109th3q-InputWrapper"
  >
    <div
      class="css-1qm0f6g-InputLabel"
    >
      <label
        class="css-1pst1pz-Label"
        for="test"
      >
        test
      </label>
    </div>
    <div
      class="css-xcsx4z"
    >
      <input
        class="css-msl6v2"
        id="test"
        value=""
      />
    </div>
  </div>
</div>
`;
